# ScanBro

./: .gitignore  README.md  ROADMAP.md  ScanBro.slnx  deep-research-report.md
data/: latest-probe.json
docs/: ghidra_canon_api_map.md
genesys_devices/: genesys.h  genesys_devices.c  genesys_gl841.c  genesys_gl841.h  genesys_gl847.c  (+2 more)
src/ScanBro.UsbDriver/: CMakeLists.txt
src/ScanBro.UsbDriver/include/: scanbro_usb.h
src/ScanBro.UsbDriver/src/: scanbro_usb.c
tools/device_test/: CMakeLists.txt  README.md  check-active-binding.ps1  cli.c  cli.h  device_test_logging.h  main.c  preview_attempt03.c  preview_attempt_data.c  preview_attempt_data.h  preview_attempt_io.c  preview_attempt_io.h  preview_attempt_phase1.c  preview_attempt_phase1.h  preview_attempt_preamble.c  preview_attempt_preamble.h  preview_attempt_readiness.c  preview_attempt_readiness.h  preview_attempt_shared.h  preview_modes.h  probe_modes.c  probe_modes.h  usb_device.c  usb_device.h
tools/device_test/build-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ScanBroDeviceTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  device_test.vcxproj  device_test.vcxproj.filters
tools/device_test/build-x64/ScanBro.UsbDriver/: cmake_install.cmake  scanbro_usb.vcxproj  scanbro_usb.vcxproj.filters
tools/device_test/build-x64/ScanBro.UsbDriver/Debug/: scanbro_usb.lib
tools/device_test/build-x64/ScanBro.UsbDriver/scanbro_usb.dir/Debug/scanbro_usb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  scanbro_usb.lastbuildstate
tools/device_test/build-x64/device_test.dir/Debug/: device_test.exe.recipe  device_test.ilk
tools/device_test/build-x64/device_test.dir/Debug/device_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tools/device_test/build-x64/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
tools/device_test/build-x64/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
tools/device_test/build-x64/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
tools/device_test/build-x64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+94 files in other folders)
